sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: not found: value lgr
  var ecart = lgr;
              ^